audio playing, revision history with description